# soft-body

./: .gitignore  CMakeLists.txt  README.md
include/: Cloth.hpp  Edge.hpp  Node.hpp  Rectangle.hpp
src/: Cloth.cpp  Edge.cpp  Node.cpp  Rectangle.cpp  helper.cpp  main.cpp
